fixed video not working on mobile 🔥

--- a/src/styles/Globals.scss
+++ b/src/styles/Globals.scss
@@ -131,12 +131,16 @@ fieldset {
 }
 
 video {
-  width: 100%;
-  height: 100%;
   object-fit: cover;
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.4);
 }
 
-video {
+.video {
   object-fit: cover;
   width: 100vw;
   height: 100vh;
